# rust-tiny-wasm

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  justfile  test.rs
.cargo/: config.toml
.github/workflows/: build-aarch64.yml
src/: assembler.rs  compiler.rs  lib.rs  loader.rs  main.rs  module.rs  names.rs  runtime.rs  valentblock.rs
src/assembler/: aarch64.rs
src/compiler/: control_instr.rs  control_instructions.rs  function.rs  numeric_instr.rs  numeric_instructions.rs  parametric_instr.rs  procedure_call.rs  stack.rs  traphandler.rs  valentblock.rs  variable_instr.rs
src/kaitai/: vlq_base128_le.rs  webassembly.rs
src/loader/: vlq_base128_le.rs  webassembly.rs
src/runtime/: debugger.rs
src/valentblock/: function.rs  procedure_call.rs  tmp.rs
templates/: wast_integration_tests.rs.jinja
tests/: arithmetics_test.rs  block_test.rs  branch_test.rs  constants_test.rs  debug_test.rs  division_test.rs  execute_test.rs  float_test.rs  integration_test.rs  lib_test.rs  loader_test.rs  locals_test.rs  loop_test.rs  mixed_test.rs  objdump.rs  parameters_test.rs  print_module_test.rs  valent_blocks_test.rs  wast_arithmetic_test.rs  wast_block_test.rs  wast_division_test.rs
tests/assets/: add.s  arithmetics-basic.wat  arithmetics.wasm  arithmetics.wat  block.wasm  block.wat  branch.wasm  branch.wat  call.wasm  constants.wasm  constants.wat  division.wasm  division.wat  draft-arithmetics.wasm  draft-arithmetics.wat  draft-locals.wasm  draft-parameters.wasm  empty-fn.wasm  empty-fn.wat  float.wasm  float.wat  invalid-module.wasm  locals.wasm  (+11 more)
(+37 files in other folders)
