[package]
name = "tiny-wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
current_platform = "0.2.0"
owo-colors = "4"
kaitai = { git = "https://github.com/kaitai-io/kaitai_struct_rust_runtime.git", tag = "v0.11.0" }
memmap2 = "0.9.10"
bytemuck = "1.25.0"
clap = { version = "4.5.60", features = ["derive"] }
leb128 = "0.2.5"
object = { version = "0.38.1", features = ["write"] }
wasmparser = "0.245.1"
